# matrix-client

./: default.nix
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
common/: common.cabal
common/src/Common/: Api.hs  Route.hs
common/src/Data/: DependentXhr.hs
common/src/Data/Aeson/: Utils.hs
common/src/Database/Beam/Matrix/: Orphans.hs
common/src/Matrix/: Identifiers.hs
common/src/Matrix/Client/: Types.hs
common/src/Matrix/Client/Types/: Common.hs  Event.hs  Filter.hs  Room.hs  UserData.hs
common/src/Matrix/Client/Types/Auth/: Account.hs  Login.hs
common/src/Matrix/Client/Types/Auth/Account/: ThirdParty.hs
common/src/Matrix/Client/Types/Event/: Abstract.hs  Route.hs
dep/beam/: github.json
dep/beam-keyed/: github.json
dep/constraints-extras/: github.json
dep/dependent-map/: github.json
dep/dependent-monoidal-map/: github.json
dep/dependent-sum-aeson-orphans/: github.json
dep/reflex/: github.json
dep/reflex-dom-forms/: github.json
dep/semantic-reflex/: github.json
dep/vessel/: git.json  github.json
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: Backend.hs  DB.hs  Query.hs  Request.hs  Schema.hs
frontend/src/Frontend/Backend/: Common.hs  QueryHandler.hs  RequestHandler.hs
frontend/src/Frontend/Query/: Sync.hs
frontend/src/Frontend/Request/: Local.hs
frontend/src/Obelisk/Route/Frontend/Logger/: Orphans.hs
frontend/src/Reflex/: Orphans.hs
frontend/src/Reflex/Dom/Prerender/: Performable.hs
