name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , attoparsec
               , base
               , beam-core
               , beam-migrate
               , ip
               , modern-uri
               , mtl
               , obelisk-route
               , text

  exposed-modules:
    Common.Route
    Data.Aeson.Utils
    Matrix.Client.Types
    Matrix.Identifiers

  other-modules:
    Database.Beam.Matrix.Orphans

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
