name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: aeson
               , attoparsec
               , base
               , beam-core
               , beam-migrate
               , ip
               , megaparsec
               , modern-uri
               , mtl
               , obelisk-route
               , singletons
               , text

  exposed-modules:
    Common.Route
    Data.Aeson.Utils
    Matrix.Client.Types
    Matrix.Client.Types.Auth.Login
    Matrix.Client.Types.Auth.Account
    Matrix.Client.Types.Auth.Account.ThirdParty
    Matrix.Client.Types.Filter
    Matrix.Client.Types.Event
    Matrix.Client.Types.Event.Route
    Matrix.Identifiers

  other-modules:
    Database.Beam.Matrix.Orphans

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
